<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_baseline_calculate_24"
            android:title="@string/nav_calculator_text" />

        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_baseline_open_in_browser_24"
            android:title="@string/browser" />

        <item
            android:id="@+id/nav_audioplayer"
            android:icon="@drawable/ic_baseline_audiotrack_24"
            android:title="@string/audio_player" />
    </group>
</menu>